fullSandbox11072023/force-app/main/default/objects/Sales_Orgs__c/Sales_Orgs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in code to dynamically control number of sales orgs and pricing flow.</description>
    <label>Sales Orgs</label>
</CustomObject>