fullSandbox11072023/force-app/main/default/objects/Sales_Orgs__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sales Org is active if checked.</description>
    <inlineHelpText>Sales Org is active if checked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>