fullSandbox11072023/force-app/main/default/objects/Sales_Orgs__c/fields/Active_Region__c.field-meta.xml
<CustomField>
    <fullName>Active_Region__c</fullName>
    <description>Active Region dropdown list values.</description>
    <inlineHelpText>Active Region dropdown list values.</inlineHelpText>
    <label>Active Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>