fullSandbox11072023/force-app/main/default/objects/Sales_Orgs__c/fields/Material_Region__c.field-meta.xml
<CustomField>
    <fullName>Material_Region__c</fullName>
    <description>Used to map checkbox material field selected with the active region.</description>
    <inlineHelpText>Used to map checkbox material field selected with the active region.</inlineHelpText>
    <label>Material Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>