fullSandbox11072023/force-app/main/default/objects/Sales_Orgs__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <description>Field describes what pricing is available for the current sales org.</description>
    <inlineHelpText>All
Hospital List
Distributor List
Alt Site List</inlineHelpText>
    <label>Pricing Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>